fix spacing of portfolio items on mobile.

--- a/assets/css/_portfolio.styl
+++ b/assets/css/_portfolio.styl
@@ -15,7 +15,7 @@ section#portfolio
       +tablet()
         j-column(1/3, gutter: 1, cycle: 3)
 
-      margin-bottom 1rem
+      margin-top 1rem
 
       .bottom
         padding 0.5em 0.25em
